--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
       </main>
 
     <footer class="page-footer panel-footer">
-        <div class="text-center py-3">© 2020 Copyright:
-            <a href="#"> Naomisocialclub.com</a>
-            <a href="#"> _______________________  </a>
-            <a href="#"><img src="assets/IMG/instagram.png" alt="instagram" class="redes"></a>
-            <a href="#"><img src="assets/IMG/Facebook.png" alt="facebook" class="redes"></a>
-            <a href="#"><img src="assets/IMG/twitter.jpg" alt="twitter" class="redes"></a>
+        <div class="text-center py-3 col-12">© 2020 Copyright:
+            <a href="#" class="col-8"> Naomisocialclub.com</a>
+            <a href="#" class="col-2"></a>
+            <a href="#" class="col-1"><img src="assets/IMG/instagram.png" alt="instagram" class="redes"></a>
+            <a href="#" class="col-1"><img src="assets/IMG/Facebook.png" alt="facebook" class="redes"></a>
+            <a href="#" class="col-1"><img src="assets/IMG/twitter.jpg" alt="twitter" class="redes"></a>
         </div>
     </footer>
 
