Esquema de streaming y tienda virtual

--- a/Streaming.html
+++ b/Streaming.html
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
+<body class="color">
+
+
     
     <div class="container">
         <div class="row">
@@ -50,7 +52,11 @@
 
     </div>
 
+    
+   
+
     <script src="./assets/JS/jquery-3.5.1.slim.min.js"></script>
+    <script src="./assets/JS/bootstrap.min.js"></script>
     <script src="./assets/JS/popper.min.js"></script>
 </body>
 </html>
