--- a/index.html
+++ b/index.html
@@ -11,21 +11,31 @@
     <header class="header">
         <nav class="navbar navbar-expand-lg fondo">
           <a class="navbar-brand" href="#"> <img src="assets/IMG/nomisLogoWhite.svg"  alt="" width="100px"> </a>
-          <button class="navbar-toggler menuFondo" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler">
+              <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-joystick" fill="white" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M7.106 15.553L.553 12.276A1 1 0 0 1 0 11.382V9.471a1 1 0 0 1 .606-.89L6 6.269v1.088L1 9.5l5.658 2.83a3 3 0 0 0 2.684 0L15 9.5l-5-2.143V6.27l5.394 2.312a1 1 0 0 1 .606.89v1.911a1 1 0 0 1-.553.894l-6.553 3.277a2 2 0 0 1-1.788 0z"/>
+                  <path fill-rule="evenodd" d="M7.5 9.5v-6h1v6h-1z"/>
+                  <path d="M10 9.75c0 .414-.895.75-2 .75s-2-.336-2-.75S6.895 9 8 9s2 .336 2 .75zM10 2a2 2 0 1 1-4 0 2 2 0 0 1 4 0z"/>
+                </svg>
+            </span>
           </button>
     
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
-                  </li>
               <li class="nav-item active">
-                <a class="nav-link" href="#">Nosotros<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Noticias (blog)</a>
+              <li class="nav-item dropdown otro">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">
+                  Nosotros
+                </a>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="#">Quienes somos</a>
+                  <a class="dropdown-item" href="#">Noticias</a>
+                </div>
               </li>
               <li class="nav-item dropdown otro">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -33,29 +43,12 @@
                   Streamming
                 </a>
                 <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">Ariana Grande</a>
-                  <a class="dropdown-item" href="#">J-balvin</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Lady Gaga</a>
-                  <a class="dropdown-item" href="#">Jorge Veloza</a>
+                  <a class="dropdown-item" href="#">Opción 1</a>
+                  <a class="dropdown-item" href="#">Opción 2</a>
                 </div>
-              </li>
-              <!-- <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li> -->
-    
-              <li class="nav-item dropdown otro">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">
-                  Tienda Virtual
-                </a>
-                <div class="dropdown-menu fondo" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Vallenato</a>
-                  <a class="dropdown-item" href="#">Salsa</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Chillout</a>
-                  <a class="dropdown-item" href="#">Rock</a>
-                </div>
+              </li>    
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Tienda virtual<span class="sr-only">(current)</span></a>
               </li>
             </ul>
             <form class="form-inline">
@@ -87,12 +80,21 @@
       </main>
 
     <footer class="page-footer panel-footer">
-        <div class="text-center py-3 col-12">© 2020 Copyright:
-            <a href="#" class="col-8"> Naomisocialclub.com</a>
-            <a href="#" class="col-2"></a>
-            <a href="#" class="col-1"><img src="assets/IMG/instagram.png" alt="instagram" class="redes"></a>
-            <a href="#" class="col-1"><img src="assets/IMG/Facebook.png" alt="facebook" class="redes"></a>
-            <a href="#" class="col-1"><img src="assets/IMG/twitter.jpg" alt="twitter" class="redes"></a>
+        <div class="text-center py-3 container">
+          <div class="row d-flex justify-content-center">
+            <div class="col-lg-8 col-md-12 col-sm-12 py-2">© 2020 Copyright:
+              <a href="#"> Naomisocialclub.com</a>
+            </div>
+            <div class="col-lg-1 col-md-1 col-sm-1 py-2">
+              <a href="#" class="col-1 "><img src="assets/IMG/instagram (1).png" alt="instagram" class="redes"></a>
+            </div>
+            <div class="col-lg-1 col-md-1 col-sm-1 py-2">
+              <a href="#" class="col-1 "><img src="assets/IMG/facebook (1).png" alt="facebook" class="redes"></a>
+            </div>
+            <div class="col-lg-1 col-md-1 col-sm-1 py-2">
+              <a href="#" class="col-1"><img src="assets/IMG/twitter.png" alt="twitter" class="redes"></a>
+            </div>
+          </div>
         </div>
     </footer>
 
