index y registro ajuste de fondo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body >
+<body class="todoFondo" >
 
   <header class="header">
     <nav class="navbar navbar-expand-lg fondo">
@@ -145,7 +145,7 @@
 
       <!-- VIDEO-->
 
-      <div class="d-flex justify-content-center mt-0 mb-3 bg-primary w-100 contenedorVideoPrincipal">
+      <div class="d-flex justify-content-center mt-2 mb-3 bg-primary w-100 contenedorVideoPrincipal">
         <iframe class="playVideo" src="https://www.youtube.com/embed/sfM7_JLk-84" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
