--- a/registro.html
+++ b/registro.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body >
+<body  class="todoFondo" >
 
   <header class="header">
     <nav class="navbar navbar-expand-lg fondo">
@@ -118,7 +118,7 @@
  
        <!-- VIDEO-->
  
-       <div class="d-flex justify-content-center mt-0 mb-3 bg-primary w-100 contenedorVideoPrincipal">
+       <div class="d-flex justify-content-center mt-2 mb-3 bg-primary w-100 contenedorVideoPrincipal">
          <iframe class="playVideo" src="https://www.youtube.com/embed/sfM7_JLk-84" frameborder="0"
            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
          </iframe>
@@ -129,7 +129,7 @@
  
       
     
-    <div class="col-12 col-md-6 order-1 order-md-2  d-flex flex-column align-items-center justify-content-start border pt-3 mb-3"> 
+    <div class="col-12 bg-white col-md-6 order-1 order-md-2  d-flex flex-column align-items-center justify-content-start border pt-3 mb-3"> 
        <!-- REGISTRO-->
             <!--  INICIO DE FORMULARIO  -->
             <form action="index.html">
