--- a/Nosotros.html
+++ b/Nosotros.html
@@ -100,7 +100,7 @@
     </div>
   </div>
   <footer>
-    <div class="card-deck p-5">
+    <div class="card-deck p-5 colorF">
       <div class="card">
         <img src="./assets/IMG/sh.gif" class="align-self-center" alt="naruto" width="180px">
         <div class="card-body">
