--- a/formulario.html
+++ b/formulario.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
 
-<body>
+<body class="color">
   <header class="header">
     <nav class="navbar navbar-expand-lg fondo">
       <a class="navbar-brand" href="#"> <img src="./assets/IMG/nomisLogoWhite.svg" alt="" width="100px"> </a>
@@ -117,15 +117,15 @@
             <div class="form-check">
               <input class="form-check-input is-invalid" type="checkbox" value="" id="invalidCheck3"
                 aria-describedby="invalidCheck3Feedback" required>
-              <label class="form-check-label" for="invalidCheck3">
+              <label class="form-check-label colorC" for="invalidCheck3">
                 Acepta condiciones y restricciones?
               </label>
-              <div id="invalidCheck3Feedback" class="invalid-feedback">
+              <div id="invalidCheck3Feedback" class="invalid-feedback colorC">
                 Debe aceptar las condiciones para continuar.
               </div>
             </div>
           </div>
-          <button type="submit" class="btn btn-outline-dark">Enviar</button>
+          <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
       </div>
       <div class="col-md-6 col-lg-6 col-sm-12 d-flex my-2">
