--- a/formulario.html
+++ b/formulario.html
@@ -5,33 +5,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Formulario de registro</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/CSS/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/CSS/style.css">
+  <link rel="stylesheet" href="./assets/CSS/styleHome.css">
 </head>
 
 <body class="color">
   <header class="header">
     <nav class="navbar navbar-expand-lg fondo">
-      <a class="navbar-brand" href="#"> <img src="./assets/IMG/nomisLogoWhite.svg" alt="" width="100px"> </a>
+      <a class="navbar-brand" href="#"> <img src="assets/IMG/nomisLogoWhite.svg"  alt="" width="100px"> </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler">
-          <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-joystick" fill="white"
-            xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M7.106 15.553L.553 12.276A1 1 0 0 1 0 11.382V9.471a1 1 0 0 1 .606-.89L6 6.269v1.088L1 9.5l5.658 2.83a3 3 0 0 0 2.684 0L15 9.5l-5-2.143V6.27l5.394 2.312a1 1 0 0 1 .606.89v1.911a1 1 0 0 1-.553.894l-6.553 3.277a2 2 0 0 1-1.788 0z" />
-            <path fill-rule="evenodd" d="M7.5 9.5v-6h1v6h-1z" />
-            <path
-              d="M10 9.75c0 .414-.895.75-2 .75s-2-.336-2-.75S6.895 9 8 9s2 .336 2 .75zM10 2a2 2 0 1 1-4 0 2 2 0 0 1 4 0z" />
-          </svg>
+          <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-joystick" fill="white" xmlns="http://www.w3.org/2000/svg">
+              <path d="M7.106 15.553L.553 12.276A1 1 0 0 1 0 11.382V9.471a1 1 0 0 1 .606-.89L6 6.269v1.088L1 9.5l5.658 2.83a3 3 0 0 0 2.684 0L15 9.5l-5-2.143V6.27l5.394 2.312a1 1 0 0 1 .606.89v1.911a1 1 0 0 1-.553.894l-6.553 3.277a2 2 0 0 1-1.788 0z"/>
+              <path fill-rule="evenodd" d="M7.5 9.5v-6h1v6h-1z"/>
+              <path d="M10 9.75c0 .414-.895.75-2 .75s-2-.336-2-.75S6.895 9 8 9s2 .336 2 .75zM10 2a2 2 0 1 1-4 0 2 2 0 0 1 4 0z"/>
+            </svg>
         </span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown otro">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -39,26 +37,27 @@
               Nosotros
             </a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Quienes somos</a>
-              <a class="dropdown-item" href="#">Noticias</a>
+              <a class="dropdown-item" href="Nosotros.html">Quienes somos</a>
+              <a class="dropdown-item" href="formulario.html">Contactenos</a>
             </div>
           </li>
           <li class="nav-item dropdown otro">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            <a class="nav-link dropdown-toggle" href="Streaming.html" id="navbarDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
               Streamming
             </a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Opción 1</a>
-              <a class="dropdown-item" href="#">Opción 2</a>
+              <a class="dropdown-item" href="Streaming.html">En vivo</a>
+              <!--<a class="dropdown-item" href="#">Opción 2</a>-->
             </div>
-          </li>
+          </li>    
           <li class="nav-item active">
-            <a class="nav-link" href="#">Tienda virtual<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="Tienda.html">Tienda virtual<span class="sr-only">(current)</span></a>
           </li>
         </ul>
         <form class="form-inline">
-          <input class="form-control mr-sm-2" type="search" placeholder="Buscar..." aria-label="Search">
+          <input class="form-control mr-sm-2" type="search" placeholder="Buscar..."
+            aria-label="Search">
           <button class="btn my-2 my-sm-0 boton" type="submit">Buscar</button>
         </form>
       </div>
@@ -139,7 +138,7 @@
     <div class="text-center py-3 container">
       <div class="row d-flex justify-content-center">
         <div class="col-lg-8 col-md-12 col-sm-12 py-2">© 2020 Copyright:
-          <a href="#"> Naomisocialclub.com</a>
+          <a href="#"> Nomisocialclub.com</a>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-1 py-2">
           <a href="#" class="col-1 "><img src="assets/IMG/instagram (1).png" alt="instagram" class="redes"></a>
@@ -153,15 +152,9 @@
       </div>
     </div>
   </footer>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
-  </script>
+  <script src="./assets/JS/jquery-3.5.1.slim.min.js"></script>
+  <script src="./assets/JS/bootstrap.min.js"></script>
+  <script src="./assets/JS/popper.min.js"></script>
 </body>
 
 </html>
