--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/CSS/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100;300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/CSS/styleHome.css">
   <link rel="stylesheet" href="./assets/CSS/style.css">
@@ -40,22 +39,22 @@
               Nosotros
             </a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Quienes somos</a>
-              <a class="dropdown-item" href="#">Noticias</a>
+              <a class="dropdown-item" href="Nosotros.html">Quienes somos</a>
+              <a class="dropdown-item" href="formulario.html">Contactenos</a>
             </div>
           </li>
           <li class="nav-item dropdown otro">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            <a class="nav-link dropdown-toggle" href="Streaming.html" id="navbarDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
               Streamming
             </a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Opción 1</a>
-              <a class="dropdown-item" href="#">Opción 2</a>
+              <a class="dropdown-item" href="Streaming.html">En vivo</a>
+              <!--<a class="dropdown-item" href="#">Opción 2</a>-->
             </div>
           </li>    
           <li class="nav-item active">
-            <a class="nav-link" href="#">Tienda virtual<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="Tienda.html">Tienda virtual<span class="sr-only">(current)</span></a>
           </li>
         </ul>
         <form class="form-inline">
@@ -71,7 +70,7 @@
 
   <main>
 <div class="container contenedorMain mt-5">
-   <div class="row justify-content-between">
+   <div class="row justify-content-between colorF">
       <div class="col-12 col-md-3  d-flex flex-column align-items-center justify-content-start mb-3"> 
        <!-- REGISTRO-->
        <form>
@@ -165,7 +164,7 @@
   <div class="text-center py-3 container">
     <div class="row d-flex justify-content-center">
       <div class="col-lg-8 col-md-12 col-sm-12 py-2">© 2020 Copyright:
-        <a href="#"> Naomisocialclub.com</a>
+        <a href="#"> Nomisocialclub.com</a>
       </div>
       <div class="col-lg-1 col-md-1 col-sm-1 py-2">
         <a href="#" class="col-1 "><img src="assets/IMG/instagram (1).png" alt="instagram" class="redes"></a>
@@ -183,16 +182,9 @@
 
   
 
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"></script>
+<script src="./assets/JS/jquery-3.5.1.slim.min.js"></script>
+<script src="./assets/JS/bootstrap.min.js"></script>
+<script src="./assets/JS/popper.min.js"></script>
 </body>
 
 </html>
