se actualiza algunos retoques

--- a/Streaming.html
+++ b/Streaming.html
@@ -70,9 +70,9 @@
     <div class="row">
       <div class="col-lg-8 col-md-8 col-sm-12 py-2">
         <div class="">
-          <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, rerum laudantium tempora sequi
-            pariatur sunt maiores! Maxime voluptatem, tenetur, fuga repudiandae nesciunt, corrupti accusantium eaque
-            iusto aperiam animi sapiente iste?</p>
+          <p class="">Este es una sección dedicada para que nuestros suscriptores puedan transmirir sus streaming de videojuegos, openbox de productos relacionados con el anime, reseñas sobre artículos tecnológicos y eventos de la comunidad geek.
+
+            Suscríbete para que no te pierdas ninguno de nuestroas novedades.</p>
 
         </div>
         <div>
