--- a/registro.html
+++ b/registro.html
@@ -129,7 +129,7 @@
  
       
     
-    <div class="col-12 bg-white col-md-6 order-1 order-md-2  d-flex flex-column align-items-center justify-content-start border pt-3 mb-3"> 
+    <div class="col-12 bg-white col-md-6 order-1 order-md-2  d-flex flex-column align-items-center justify-content-start border pt-3 mb-3 colorF"> 
        <!-- REGISTRO-->
             <!--  INICIO DE FORMULARIO  -->
             <form action="index.html">
